fix(faction): replace Math.max by clamp